# aoc

2023/: .gitignore  :
2023/kavi/day-01/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-02/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-03/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-04/: i.txt
2023/kavi/day-04/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-05/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-06/src/: main.rs  part_a.rs  part_b.rs
2023/kavi/day-07/src/: load.rs  main.rs  part_a.rs  part_b.rs
2023/kavi/day-08/src/: load.rs  (+4 more)
2023/kavi/day-10/: Cargo.toml
2023/kavi/day-16/: Cargo.toml
2023/kavi/day-21/: Cargo.toml  Makefile
2023/kavi/day-22/: Cargo.toml  getinput.sh
2023/kavi/utils/: Cargo.toml
2023/kavi/utils/benches/: optimise_recursive_benchmark.rs  search_queue_benchmark.rs  searchable_ordered_list_benchmark.rs
2023/kavi/utils/src/: lib.rs
2023/kavi/utils/src/algorithms/: mod.rs
2023/kavi/utils/src/algorithms/combinations/: indices.rs
2023/kavi/utils/src/algorithms/optimise/: exhaustive.rs
2023/kavi/utils/src/algorithms/search/: binaryheap.rs  mod.rs  parallel.rs  queue.rs
2023/kavi/utils/src/structures/: graph.rs  mod.rs  searchable_ordered_list.rs
2023/kavi/utils/src/traits/: problem.rs
2025/day-1/src/: main.rs
2025/day-2/src/: main.rs
2025/day-3/src/: main.rs
2025/day-4/src/: main.rs
2025/day-5/src/: main.rs
2025/day-6/src/: main.rs
2025/day-7/src/: main.rs
2025/day-8/: Cargo.toml
2025/day-8/src/: main.rs
2025/day-9/src/: main.rs
(+73 files in other folders)
