[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.16"
itertools = "0.12.0"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "searchable_ordered_list_benchmark"
harness = false

[[bench]]
name = "search_queue_benchmark"
harness = false

[[bench]]
name = "optimise_recursive_benchmark"
harness = false
